[tool.poetry]
name = "marl-and-dmpc-for-or"
version = "0.1.0"
description = "A comparative study for MARL and DMPC methods for operations research problems"
authors = ["Marwan Mousa <marwan.mousa15@imperial.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
scipy = "^1.6.3"
matplotlib = "^3.4.2"
torch = "^1.8.1"
ray = "^1.3.0"
or-gym = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
