[tool.poetry]
name = "marl-and-dmpc-for-or"
version = "0.1.0"
description = "A comparative study for MARL and DMPC methods for operations research problems"
authors = ["Marwan Mousa <marwan.mousa15@imperial.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = ">=1.19.2,<1.20.0"
scipy = "^1.6.3"
matplotlib = "^3.4.2"
torch = "^1.8.1"
ray = {extras = ["default"], version = "^1.3.0"}
or-gym = "^0.2.0"
pandas = "^1.2.4"
tabulate = "^0.8.9"
dm-tree = "^0.1.6"
opencv-contrib-python-headless = "^4.5.2"
lz4 = "^3.1.3"
tensorflow = "^2.5.0"
gym = "^0.18.3"
tensorboard = "^2.5.0"
tensorboardX = "^2.4"
PuLP = "^2.4"
Pyomo = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
